feat: add owner authentication and check in
